--- a/src/app/modals/export-modal/export-modal.component.html
+++ b/src/app/modals/export-modal/export-modal.component.html
@@ -90,7 +90,7 @@
           matSuffix 
           (click)="selectFolder()" 
           aria-label="Browse for export folder">
-          <mat-icon svgIcon="folder"></mat-icon>
+          <mat-icon svgIcon="folder" color="primary"></mat-icon>
         </button>
       </mat-form-field>
     </div>
