--- a/src/app/modals/preferences-modal/preferences-modal.component.html
+++ b/src/app/modals/preferences-modal/preferences-modal.component.html
@@ -8,7 +8,7 @@
 
     <!-- Title (Mobile) or Desktop Tabs -->
     @if (bottomTabs) {
-      <h2>Preferences</h2>
+      <p>Preferences</p>
     } @else {
       <div class="desktop-tabs" data-tauri-drag-region>
         @for (tab of filteredTabs; track tab; let i = $index) {
