--- a/src/app/shared/remote-config/components/remote-config-step/remote-config-step.component.scss
+++ b/src/app/shared/remote-config/components/remote-config-step/remote-config-step.component.scss
@@ -66,7 +66,7 @@ form {
     
     .remote-label {
       font-weight: 500;
-      font-size: 14px;
+      font-size: var(--font-size-sm);
       color: var(--app-text-color);
     }
   }
