--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,17 +11,10 @@
 <div class="app-wrapper">
   <router-outlet></router-outlet>
   @if (!completedOnboarding) {
-  <app-onboarding class="onboarding" (completed)="finishOnboarding()">
+  <app-onboarding class="onboarding" (completed)="finishOnboarding()" (selectCustomFolder)="selectCustomPath()">
   </app-onboarding>
   }
   <app-titlebar class="title-bar"></app-titlebar>
-  <mat-toolbar [@slideToggle]="isMeteredConnection ? 'visible' : 'hidden'" class="metered-banner" role="alert">
-    You are on a metered connection. Some features may use extra data.
-  </mat-toolbar>
-  <app-home appRightClick></app-home> <!-- Enable Right-Click on Home -->
-  @if (isMobile$ | async) {
-  <div class="mobile-tab-bar">
-    <app-tabs-buttons></app-tabs-buttons>
-  </div>
-  }
+  <app-tabs-buttons data-tauri-drag-region class="tabs" [currentTab]="currentTab" (tabSelected)="setTab($event)"></app-tabs-buttons>
+  <app-home></app-home>
 </div>
